data/collection/fixes/descriptions/java/JDK-8224031
Consider this code:
---
public class SE {
     private void t(Integer i) {
         String s = (String) switch (i) { default -> null; };
     }
}
---

Compiling this code leads to:
---
$ javac --enable-preview --source 13 SE.java 
SE.java:3: error: ';' expected
         String s = (String) switch (i) { default -> null; };
                            ^
SE.java:3: error: not a statement
         String s = (String) switch (i) { default -> null; };
                                                     ^
Note: SE.java uses preview language features.
Note: Recompile with -Xlint:preview for details.
2 errors
---
